--- a/.gitignore
+++ b/.gitignore
@@ -18,5 +18,13 @@
 *.tar.gz
 *.rar
 
+#idea
+.idea
+*.iml
+
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+#other
+*.properties
+target
