--- a/pom.xml
+++ b/pom.xml
@@ -16,4 +16,16 @@
         </dependency>
     </dependencies>
 
+    <dependency>
+        <groupId>org.jsoup</groupId>
+        <artifactId>jsoup</artifactId>
+        <version>1.7.3</version>
+    </dependency>
+
+    <dependency>
+        <groupId>net.sourceforge.javacsv</groupId>
+        <artifactId>javacsv</artifactId>
+        <version>2.0</version>
+    </dependency>
+
 </project>
