--- a/pom.xml
+++ b/pom.xml
@@ -14,18 +14,21 @@
             <artifactId>crawler4j</artifactId>
             <version>4.3</version>
         </dependency>
+
+        <!--<dependency>-->
+            <!--<groupId>org.jsoup</groupId>-->
+            <!--<artifactId>jsoup</artifactId>-->
+            <!--<version>1.7.3</version>-->
+        <!--</dependency>-->
+
+        <!--<dependency>-->
+            <!--<groupId>net.sourceforge.javacsv</groupId>-->
+            <!--<artifactId>javacsv</artifactId>-->
+            <!--<version>2.0</version>-->
+        <!--</dependency>-->
+
     </dependencies>
 
-    <dependency>
-        <groupId>org.jsoup</groupId>
-        <artifactId>jsoup</artifactId>
-        <version>1.7.3</version>
-    </dependency>
 
-    <dependency>
-        <groupId>net.sourceforge.javacsv</groupId>
-        <artifactId>javacsv</artifactId>
-        <version>2.0</version>
-    </dependency>
 
 </project>
